apps/bookinfo-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bookinfo
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/monitoring-gateway
  http:
    - match:
        - uri:
            exact: "/productpage"
        - uri:
            prefix: "/static"
        - uri:
            prefix: "/login"
        - uri:
            prefix: "/logout"
        - uri:
            prefix: "/api/v1/products"
      route:
        - destination:
            host: productpage
            port:
              number: 9080
